--- a/config.json
+++ b/config.json
@@ -73,15 +73,15 @@
       "api": "https://wwzy.tv/api.php/provide/vod",
       "name": "旺旺短剧"
     },
-    "wwzy": {
+    "ftys": {
       "api": "https://www.fantuan.tv/api.php/provide/vod",
       "name": "饭团影视"
     },
-    "wwzy": {
+    "ysgc": {
       "api": "https://cj.lziapi.com/api.php/provide/vod",
       "name": "影视工厂"
     },
-    "wwzy": {
+    "qqzy": {
       "api": "https://www.qiqidys.com/api.php/provide/vod",
       "name": "七七资源"
     },
